# asdlib-c

./: .gitignore  CMakeLists.txt
include/asdlib/: asdlib.h  binary_tree.h  queue.h  singly_linked_list.h  stack.h
include/asdlib/containers/: queue.h  stack.h
include/asdlib/core/lists/: singly_linked_list.h
src/: CMakeLists.txt
src/containers/: queue.c  stack.c
src/core/lists/: singly_linked_list.c
src/core/trees/: binary_tree.c
